--- a/it_modernization/raw_data/events.yaml
+++ b/it_modernization/raw_data/events.yaml
@@ -63,6 +63,23 @@
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf#page=13
   agency: Treasury
 
+- date: 2025-01-12
+  type: report
+  event: A New York Times report on DOGE from just before the Inauguration roughly describes the working arrangements for embedding some staff and detailing others as well as some early participants in the project
+  named:
+  - Marc Andreessen
+  - Shaun Maguire
+  - Baris Akis
+  - Vinay Hiremath
+  - Brad Smith
+  - Steve Davis
+  - Matt Luby
+  - Joanna Wischer
+  - Rachel Riley
+  - James Burnham
+  source: https://www.nytimes.com/2025/01/12/us/politics/elon-musk-doge-government-trump.html
+  agency: DOGE
+
 - date: 2025-01-16~
   type: report
   event: Noah Peters recalls discussing the concept of using administrative leave to sideline federal employees with Keenan Kmiec before January 20th
@@ -5351,6 +5368,23 @@
   event: Social Security introduces a new AI chatbot built from general OpenAI models and not trained on SSA data or content to help with general tasks
   source: https://www.nextgov.com/artificial-intelligence/2025/04/ssa-rolling-out-new-chatbot-employees/404658/?oref=ng-home-top-story
   agency: SSA
+
+- date: 2025-04-17
+  type: report
+  event: The Washington Posts reports that both Tyler Hassen and Matt Luby are scrutinizing all grants at the Department of the Interior. They also requested a list of all grants going to Maine, perhaps to punish the state for its governor's defiance of Trump.
+  named:
+  - Tyler Hassen
+  - Matt Luby
+  source: https://www.washingtonpost.com/climate-environment/2025/04/21/tyler-hassen-department-of-interior/
+  agency: DOI
+
+- date: 2025-04-17
+  type: report
+  event: The Secretary of the Interior formally designates that Tyler Hassen is in charge of implementing cuts to the agency and reorganizing its responsibilities
+  named:
+  - Tyler Hassen
+  source: https://www.washingtonpost.com/climate-environment/2025/04/21/tyler-hassen-department-of-interior/
+  agency: DOI
 
 - date: 2025-04-18~
   type: access_revoked
